@@ -39,8 +39,12 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+
+import static com.farao_community.farao.cse_valid.api.resource.CseValidRequest.buildD2ccValidRequest;
+import static com.farao_community.farao.cse_valid.api.resource.CseValidRequest.buildIdccValidRequest;
+import static java.util.Comparator.comparing;
+import static java.util.function.Function.identity;
+import static java.util.stream.Collectors.toMap;
 
 /**
  * @author Ameni Walha {@literal <ameni.walha at rte-france.com>}
@@ -64,7 +68,12 @@ public class CseValidPublicationService {
     private final MinioAdapter minioAdapter;
     private final TaskManagerService taskManagerService;
 
-    public CseValidPublicationService(CseValidClient cseValidClient, FileExporter fileExporter, FileImporter fileImporter, FileUtils fileUtils, MinioAdapter minioAdapter, final TaskManagerService taskManagerService) {
+    public CseValidPublicationService(final CseValidClient cseValidClient,
+                                      final FileExporter fileExporter,
+                                      final FileImporter fileImporter,
+                                      final FileUtils fileUtils,
+                                      final MinioAdapter minioAdapter,
+                                      final TaskManagerService taskManagerService) {
         this.cseValidClient = cseValidClient;
         this.fileExporter = fileExporter;
         this.fileImporter = fileImporter;
@@ -73,11 +82,13 @@ public class CseValidPublicationService {
         this.taskManagerService = taskManagerService;
     }
 
-    public void publishProcess(ProcessType processType, String initialTargetDate, int targetDateOffset) {
-        LocalDate targetDateWithOffset;
+    public void publishProcess(final ProcessType processType,
+                               final String initialTargetDate,
+                               final int targetDateOffset) {
+        final LocalDate targetDateWithOffset;
         try {
             targetDateWithOffset = LocalDate.parse(initialTargetDate).plusDays(targetDateOffset);
-        } catch (DateTimeException e) {
+        } catch (final DateTimeException e) {
             throw new CseValidPublicationInvalidDataException(String.format("Incorrect format for target date: '%s' is invalid, please use ISO-8601 format", initialTargetDate), e);
         }
         LOGGER.info("Target date with offset: {}", targetDateWithOffset);
@@ -86,140 +97,150 @@ public class CseValidPublicationService {
         final TcDocumentTypeWriter tcDocumentTypeWriter = new TcDocumentTypeWriter(processCode, targetDateWithOffset);
 
         final TaskDto[] taskDtoArray = taskManagerService.getTasksFromBusinessDate(targetDateWithOffset.toString())
-                .filter(taskDtos -> taskDtos.length > 0)
-                .orElseThrow(() -> new CseValidPublicationInternalException("Failed to retrieve task DTOs on business date"));
+            .filter(taskDtos -> taskDtos.length > 0)
+            .orElseThrow(() -> new CseValidPublicationInternalException("Failed to retrieve task DTOs on business date"));
 
         getProcessFile(taskDtoArray[0], TTC_ADJUSTMENT_FILE)
-                .filter(this::isProcessFileDtoConsistent)
-                .map(processFileDto -> fileImporter.importTtcFile(minioAdapter.generatePreSignedUrlFromFullMinioPath(processFileDto.getFilePath(), 1)))
-                .ifPresentOrElse(
-                        tcDocumentType -> validateTtc(processType, initialTargetDate, taskDtoArray, tcDocumentType, tcDocumentTypeWriter),
-                        tcDocumentTypeWriter::fillWithNoTtcAdjustmentError);
+            .filter(this::isProcessFileDtoConsistent)
+            .map(processFileDto -> fileImporter.importTtcFile(minioAdapter.generatePreSignedUrlFromFullMinioPath(processFileDto.getFilePath(), 1)))
+            .ifPresentOrElse(
+                tcDocumentType -> validateTtc(processType, initialTargetDate, taskDtoArray, tcDocumentType, tcDocumentTypeWriter),
+                tcDocumentTypeWriter::fillWithNoTtcAdjustmentError);
 
         fileExporter.saveTtcValidation(tcDocumentTypeWriter, processType, targetDateWithOffset);
     }
 
-    private void validateTtc(ProcessType processType, String initialTargetDate, TaskDto[] taskDtoArray, TcDocumentType tcDocument, TcDocumentTypeWriter tcDocumentTypeWriter) {
-        Map<TTimestamp, CseValidRequest> timestampCseValidRequests = new HashMap<>();
-        List<TTimestamp> timestampsToBeValidated = tcDocument.getAdjustmentResults().get(0).getTimestamp();
+    private void validateTtc(final ProcessType processType,
+                             final String initialTargetDate,
+                             final TaskDto[] taskDtoArray,
+                             final TcDocumentType tcDocument,
+                             final TcDocumentTypeWriter tcDocumentTypeWriter) {
+        final Map<TTimestamp, CseValidRequest> timestampCseValidRequests = new HashMap<>();
+        final List<TTimestamp> timestampsToBeValidated = tcDocument.getAdjustmentResults().getFirst().getTimestamp();
         LOGGER.info("TTC adjustment file contains {} timestamps to be validated", timestampsToBeValidated.size());
 
-        Map<String, TaskDto> taskDtoMap = Arrays.stream(taskDtoArray)
-                .map(dto -> taskManagerService.addNewRunInTaskHistory(dto.getTimestamp().toString(), dto.getInputs()))
-                .filter(Optional::isPresent)
-                .map(Optional::get)
-                .collect(Collectors.toMap(td -> td.getTimestamp().format(TIMESTAMP_FORMATTER), Function.identity()));
+        final Map<String, TaskDto> taskDtoMap = Arrays.stream(taskDtoArray)
+            .map(dto -> taskManagerService.addNewRunInTaskHistory(dto.getTimestamp().toString(), dto.getInputs()))
+            .filter(Optional::isPresent)
+            .map(Optional::get)
+            .collect(toMap(td -> td.getTimestamp().format(TIMESTAMP_FORMATTER), identity()));
         timestampsToBeValidated.forEach(ts -> timestampCseValidRequests.put(ts, buildCseValidRequest(processType, ts, taskDtoMap.get(ts.getReferenceCalculationTime().getV()))));
 
-        Map<TTimestamp, CompletableFuture<CseValidResponse>> timestampCseValidResponses = new HashMap<>();
+        final Map<TTimestamp, CompletableFuture<CseValidResponse>> timestampCseValidResponses = new HashMap<>();
 
         try {
             runCseValidRequests(timestampCseValidRequests, timestampCseValidResponses);
-        } catch (InterruptedException e) {
+        } catch (final InterruptedException e) {
             Thread.currentThread().interrupt();
             throw new CseValidPublicationInternalException(String.format("Error during Cse valid running for date %s", initialTargetDate), e);
-        } catch (ExecutionException e) {
+        } catch (final ExecutionException e) {
             throw new CseValidPublicationInternalException(String.format("Error during Cse valid running for date %s", initialTargetDate), e);
         }
 
         fillResultForAllTimestamps(timestampCseValidResponses, tcDocumentTypeWriter);
     }
 
-    private CseValidRequest buildCseValidRequest(ProcessType processType, TTimestamp ts, TaskDto taskDto) {
-        String referenceCalculationTimeValue = ts.getReferenceCalculationTime().getV();
+    private CseValidRequest buildCseValidRequest(final ProcessType processType,
+                                                 final TTimestamp ts,
+                                                 final TaskDto taskDto) {
+        final String referenceCalculationTimeValue = ts.getReferenceCalculationTime().getV();
 
         if (taskDto == null) {
             throw new CseValidPublicationInvalidDataException(String.format("No task associated with the calculation time: %s", referenceCalculationTimeValue));
         }
 
-        OffsetDateTime time = OffsetDateTime.parse(ts.getTime().getV());
-        OffsetDateTime targetTimestamp = OffsetDateTime.parse(referenceCalculationTimeValue);
-        CseValidFileResource ttcAdjustmentFile = getFileResourceOrThrow(taskDto, TTC_ADJUSTMENT_FILE, referenceCalculationTimeValue);
-        CseValidFileResource cgmFile = getFileResource(taskDto, CGM_FILE);
-        CseValidFileResource glskFile = getFileResource(taskDto, GLSK_FILE);
-        CseValidFileResource importCracFile = getFileResource(taskDto, IMPORT_CRAC_FILE);
-        CseValidFileResource exportCracFile = getFileResource(taskDto, EXPORT_CRAC_FILE);
-        String runId = getCurrentRunId(taskDto);
+        final OffsetDateTime time = OffsetDateTime.parse(ts.getTime().getV());
+        final OffsetDateTime targetTimestamp = OffsetDateTime.parse(referenceCalculationTimeValue);
+        final CseValidFileResource ttcAdjustmentFile = getFileResourceOrThrow(taskDto, TTC_ADJUSTMENT_FILE, referenceCalculationTimeValue);
+        final CseValidFileResource cgmFile = getFileResource(taskDto, CGM_FILE);
+        final CseValidFileResource glskFile = getFileResource(taskDto, GLSK_FILE);
+        final CseValidFileResource importCracFile = getFileResource(taskDto, IMPORT_CRAC_FILE);
+        final CseValidFileResource exportCracFile = getFileResource(taskDto, EXPORT_CRAC_FILE);
+        final String runId = getCurrentRunId(taskDto);
 
         return switch (processType) {
-            case IDCC -> CseValidRequest.buildIdccValidRequest(taskDto.getId().toString(),
-                    runId,
-                    targetTimestamp,
-                    ttcAdjustmentFile,
-                    importCracFile,
-                    exportCracFile,
-                    cgmFile,
-                    glskFile,
-                    time);
-            case D2CC -> CseValidRequest.buildD2ccValidRequest(taskDto.getId().toString(),
-                    runId,
-                    targetTimestamp,
-                    ttcAdjustmentFile,
-                    importCracFile,
-                    exportCracFile,
-                    cgmFile,
-                    glskFile,
-                    time);
+            case IDCC -> buildIdccValidRequest(taskDto.getId().toString(),
+                                               runId,
+                                               targetTimestamp,
+                                               ttcAdjustmentFile,
+                                               importCracFile,
+                                               exportCracFile,
+                                               cgmFile,
+                                               glskFile,
+                                               time);
+            case D2CC -> buildD2ccValidRequest(taskDto.getId().toString(),
+                                               runId,
+                                               targetTimestamp,
+                                               ttcAdjustmentFile,
+                                               importCracFile,
+                                               exportCracFile,
+                                               cgmFile,
+                                               glskFile,
+                                               time);
         };
     }
 
-    private void runCseValidRequests(Map<TTimestamp, CseValidRequest> timestampCseValidRequests, Map<TTimestamp, CompletableFuture<CseValidResponse>> timestampCompletableFutures) throws ExecutionException, InterruptedException {
+    private void runCseValidRequests(final Map<TTimestamp, CseValidRequest> timestampCseValidRequests,
+                                     final Map<TTimestamp, CompletableFuture<CseValidResponse>> timestampCompletableFutures) throws ExecutionException, InterruptedException {
         timestampCseValidRequests.forEach((ts, request) -> {
-            CompletableFuture<CseValidResponse> cseValidResponseCompletable = runCseValidRequest(request);
+            final CompletableFuture<CseValidResponse> cseValidResponseCompletable = runCseValidRequest(request);
             timestampCompletableFutures.put(ts, cseValidResponseCompletable);
 
             cseValidResponseCompletable
-                    .thenAccept(cseValidResponse1 -> LOGGER.info("Cse valid response received {}", cseValidResponse1))
-                    .exceptionally(ex -> {
-                        LOGGER.error(String.format("Exception occurred during running Cse valid request for time %s", ts.getTime().getV()), ex);
-                        return null;
-                    });
+                .thenAccept(cseValidResponse1 -> LOGGER.info("Cse valid response received {}", cseValidResponse1))
+                .exceptionally(ex -> {
+                    LOGGER.error(String.format("Exception occurred during running Cse valid request for time %s", ts.getTime().getV()), ex);
+                    return null;
+                });
         });
 
         CompletableFuture.allOf(timestampCompletableFutures.values().toArray(new CompletableFuture[0])).get();
     }
 
-    private CompletableFuture<CseValidResponse> runCseValidRequest(CseValidRequest cseValidRequest) {
+    private CompletableFuture<CseValidResponse> runCseValidRequest(final CseValidRequest cseValidRequest) {
         //cse publication send requests asynchronously but cse valid runner does not allow yet asynchronous run
         if (cseValidRequest == null) {
             return CompletableFuture.completedFuture(null);
         }
 
         return CompletableFuture.supplyAsync(() -> cseValidClient.run(cseValidRequest))
-                .exceptionally(ex -> {
-                    LOGGER.error(String.format("Exception during running Cse Valid request for timestamp '%s'", cseValidRequest.getTimestamp()), ex);
-                    return null;
-                });
+            .exceptionally(ex -> {
+                LOGGER.error(String.format("Exception during running Cse Valid request for timestamp '%s'", cseValidRequest.getTimestamp()), ex);
+                return null;
+            });
     }
 
-    private void fillResultForAllTimestamps(Map<TTimestamp, CompletableFuture<CseValidResponse>> timestampCseValidResponses, TcDocumentTypeWriter tcDocumentTypeWriter) {
-        timestampCseValidResponses.forEach((ts, cseValidResponseCompletableFuture) -> {
+    private void fillResultForAllTimestamps(final Map<TTimestamp, CompletableFuture<CseValidResponse>> timestampCseValidResponses,
+                                            final TcDocumentTypeWriter tcDocumentTypeWriter) {
+        timestampCseValidResponses.forEach((timestamp, cseValidResponseCompletableFuture) -> {
             try {
-                fillWithCseValidResponse(ts, cseValidResponseCompletableFuture.get(), tcDocumentTypeWriter);
-            } catch (ExecutionException e) {
-                LOGGER.error(String.format("Exception occurred during results creation for timestamp %s", ts.getTime().getV()), e);
-                tcDocumentTypeWriter.fillWithError(ts);
-            } catch (InterruptedException e) {
-                LOGGER.error(String.format("Exception occurred during results creation for timestamp %s", ts.getTime().getV()), e);
+                fillWithCseValidResponse(timestamp, cseValidResponseCompletableFuture.get(), tcDocumentTypeWriter);
+            } catch (final ExecutionException e) {
+                LOGGER.error(String.format("Exception occurred during results creation for timestamp %s", timestamp.getTime().getV()), e);
+                tcDocumentTypeWriter.fillWithError(timestamp, "Process failed: internal error during execution");
+            } catch (final InterruptedException e) {
+                LOGGER.error(String.format("Exception occurred during results creation for timestamp %s", timestamp.getTime().getV()), e);
                 Thread.currentThread().interrupt();
-                tcDocumentTypeWriter.fillWithError(ts);
+                tcDocumentTypeWriter.fillWithError(timestamp, "Process failed: execution have been interrupted");
             }
         });
     }
 
-    private void fillWithCseValidResponse(TTimestamp ts, CseValidResponse cseValidResponse, TcDocumentTypeWriter tcDocumentTypeWriter) {
-        String time = ts.getTime().getV();
+    private void fillWithCseValidResponse(final TTimestamp timestamp,
+                                          final CseValidResponse cseValidResponse,
+                                          final TcDocumentTypeWriter tcDocumentTypeWriter) {
+        String time = timestamp.getTime().getV();
 
         if (cseValidResponse == null || cseValidResponse.getResultFileUrl() == null) {
             LOGGER.warn("No TTC validation url found for time {}", time);
-            tcDocumentTypeWriter.fillWithError(ts);
+            tcDocumentTypeWriter.fillWithError(timestamp, "Process failed: no response");
         } else {
-            TcDocumentType tcDocumentType = fileImporter.importTtcFile(cseValidResponse.getResultFileUrl());
-            TTimestamp timestampResult = getTimestampResult(tcDocumentType, time);
+            final TcDocumentType tcDocumentType = fileImporter.importTtcFile(cseValidResponse.getResultFileUrl());
+            final TTimestamp timestampResult = getTimestampResult(tcDocumentType, time);
 
             if (timestampResult == null) {
                 LOGGER.warn("No timestamp result found for time {}", time);
-                tcDocumentTypeWriter.fillWithError(ts);
+                tcDocumentTypeWriter.fillWithError(timestamp, "Process failed: Unsafe calculated values");
             } else {
                 LOGGER.info("Filling timestamp result for time {}", time);
                 tcDocumentTypeWriter.fillWithTimestampResult(timestampResult);
@@ -227,47 +248,52 @@ public class CseValidPublicationService {
         }
     }
 
-    private TTimestamp getTimestampResult(TcDocumentType tcDocumentType, String time) {
-        if (tcDocumentType == null || tcDocumentType.getValidationResults().get(0) == null) {
+    private TTimestamp getTimestampResult(final TcDocumentType tcDocumentType,
+                                          final String time) {
+        if (tcDocumentType == null || tcDocumentType.getValidationResults().getFirst() == null) {
             return null;
         }
-        return tcDocumentType.getValidationResults().get(0).getTimestamp().stream()
-                .filter(t -> t.getTime().getV().equals(time))
-                .findFirst()
-                .orElse(null);
+        return tcDocumentType.getValidationResults().getFirst().getTimestamp().stream()
+            .filter(t -> t.getTime().getV().equals(time))
+            .findFirst()
+            .orElse(null);
     }
 
-    private static Optional<ProcessFileDto> getProcessFile(TaskDto taskDto, String fileType) {
+    private static Optional<ProcessFileDto> getProcessFile(final TaskDto taskDto,
+                                                           final String fileType) {
         return taskDto.getInputs().stream()
-                .filter(f -> f.getFileType().equals(fileType))
-                .findFirst();
+            .filter(f -> f.getFileType().equals(fileType))
+            .findFirst();
     }
 
-    private CseValidFileResource getFileResource(TaskDto taskDto, String fileType) {
+    private CseValidFileResource getFileResource(final TaskDto taskDto,
+                                                 final String fileType) {
         return getProcessFile(taskDto, fileType)
-                .filter(this::isProcessFileDtoConsistent)
-                .map(pfd -> fileUtils.createFileResource(pfd.getFilename(), minioAdapter.generatePreSignedUrlFromFullMinioPath(pfd.getFilePath(), 1)))
-                .orElse(null);
+            .filter(this::isProcessFileDtoConsistent)
+            .map(file -> fileUtils.createFileResource(file.getFilename(), minioAdapter.generatePreSignedUrlFromFullMinioPath(file.getFilePath(), 1)))
+            .orElse(null);
     }
 
-    private CseValidFileResource getFileResourceOrThrow(TaskDto taskDto, String fileType, String referenceCalculationTimeValue) {
+    private CseValidFileResource getFileResourceOrThrow(final TaskDto taskDto,
+                                                        final String fileType,
+                                                        final String referenceCalculationTimeValue) {
         return getProcessFile(taskDto, fileType)
-                .filter(this::isProcessFileDtoConsistent)
-                .map(pfd -> fileUtils.createFileResource(pfd.getFilename(), minioAdapter.generatePreSignedUrlFromFullMinioPath(pfd.getFilePath(), 1)))
-                .orElseThrow(() -> new CseValidPublicationInvalidDataException(String.format("No %s file found in task for timestamp: %s", fileType, referenceCalculationTimeValue)));
+            .filter(this::isProcessFileDtoConsistent)
+            .map(file -> fileUtils.createFileResource(file.getFilename(), minioAdapter.generatePreSignedUrlFromFullMinioPath(file.getFilePath(), 1)))
+            .orElseThrow(() -> new CseValidPublicationInvalidDataException(String.format("No %s file found in task for timestamp: %s", fileType, referenceCalculationTimeValue)));
     }
 
-    private boolean isProcessFileDtoConsistent(ProcessFileDto processFileDto) {
+    private boolean isProcessFileDtoConsistent(final ProcessFileDto processFileDto) {
         return processFileDto.getFilename() != null && processFileDto.getFilePath() != null;
     }
 
-    String getCurrentRunId(TaskDto taskDto) {
-        List<ProcessRunDto> runHistory = taskDto.getRunHistory();
+    String getCurrentRunId(final TaskDto taskDto) {
+        final List<ProcessRunDto> runHistory = taskDto.getRunHistory();
         if (runHistory == null || runHistory.isEmpty()) {
             LOGGER.warn("Failed to handle run request on timestamp {} because it has no run history", taskDto.getTimestamp());
             throw new CseValidPublicationInternalException("Failed to handle run request on timestamp because it has no run history");
         }
-        runHistory.sort((o1, o2) -> o2.getExecutionDate().compareTo(o1.getExecutionDate()));
-        return runHistory.get(0).getId().toString();
+        runHistory.sort(comparing(ProcessRunDto::getExecutionDate));
+        return runHistory.getFirst().getId().toString();
     }
 }
