@@ -10,19 +10,14 @@ import com.farao_community.farao.cse_valid_publication.app.exception.CseValidPub
 import com.farao_community.farao.cse_valid_publication.app.exception.CseValidPublicationInvalidDataException;
 import com.farao_community.farao.cse_valid_publication.app.xsd.AreaType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.BusinessType;
-import com.farao_community.farao.cse_valid_publication.app.xsd.BusinessTypeList;
-import com.farao_community.farao.cse_valid_publication.app.xsd.CodingSchemeType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.EnergyProductType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.IdentificationType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.LongIdentificationType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.MessageDateTimeType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.MessageType;
-import com.farao_community.farao.cse_valid_publication.app.xsd.MessageTypeList;
 import com.farao_community.farao.cse_valid_publication.app.xsd.PartyType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.ProcessType;
-import com.farao_community.farao.cse_valid_publication.app.xsd.ProcessTypeList;
 import com.farao_community.farao.cse_valid_publication.app.xsd.RoleType;
-import com.farao_community.farao.cse_valid_publication.app.xsd.RoleTypeList;
 import com.farao_community.farao.cse_valid_publication.app.xsd.TNumber;
 import com.farao_community.farao.cse_valid_publication.app.xsd.TResultTimeseries;
 import com.farao_community.farao.cse_valid_publication.app.xsd.TTime;
@@ -31,13 +26,12 @@ import com.farao_community.farao.cse_valid_publication.app.xsd.TcDocumentType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.TextType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.TimeIntervalType;
 import com.farao_community.farao.cse_valid_publication.app.xsd.UnitOfMeasureType;
-import com.farao_community.farao.cse_valid_publication.app.xsd.UnitOfMeasureTypeList;
 import com.farao_community.farao.cse_valid_publication.app.xsd.VersionType;
-
 import jakarta.xml.bind.JAXBContext;
 import jakarta.xml.bind.JAXBElement;
 import jakarta.xml.bind.JAXBException;
 import jakarta.xml.bind.Marshaller;
+
 import javax.xml.datatype.DatatypeConfigurationException;
 import javax.xml.datatype.DatatypeFactory;
 import javax.xml.datatype.XMLGregorianCalendar;
@@ -45,7 +39,6 @@ import javax.xml.namespace.QName;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
 import java.io.StringWriter;
-import java.math.BigInteger;
 import java.time.LocalDate;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
@@ -53,7 +46,6 @@ import java.time.format.DateTimeFormatter;
 import java.util.Comparator;
 import java.util.GregorianCalendar;
 import java.util.List;
-import java.util.Locale;
 
 import static com.farao_community.farao.cse_valid_publication.app.services.Constants.DOMAIN;
 import static com.farao_community.farao.cse_valid_publication.app.services.Constants.EUROPE_BRUSSELS_ZONE_ID;
@@ -64,12 +56,24 @@ import static com.farao_community.farao.cse_valid_publication.app.services.Const
 import static com.farao_community.farao.cse_valid_publication.app.services.Constants.SENDER_IDENTIFICATION;
 import static com.farao_community.farao.cse_valid_publication.app.services.Constants.STATUS_ERROR_MESSAGE;
 import static com.farao_community.farao.cse_valid_publication.app.services.Constants.TIMESERIES_IDENTIFICATION_PATTERN;
+import static com.farao_community.farao.cse_valid_publication.app.xsd.BusinessTypeList.A_81;
+import static com.farao_community.farao.cse_valid_publication.app.xsd.CodingSchemeType.A_01;
+import static com.farao_community.farao.cse_valid_publication.app.xsd.MessageTypeList.A_32;
+import static com.farao_community.farao.cse_valid_publication.app.xsd.ProcessTypeList.A_15;
+import static com.farao_community.farao.cse_valid_publication.app.xsd.RoleTypeList.A_04;
+import static com.farao_community.farao.cse_valid_publication.app.xsd.UnitOfMeasureTypeList.MAW;
+import static java.math.BigInteger.ONE;
+import static java.math.BigInteger.ZERO;
+import static java.time.format.DateTimeFormatter.ISO_INSTANT;
+import static java.util.Comparator.comparing;
+import static java.util.Locale.FRANCE;
 
 /**
  * @author Theo Pascoli {@literal <theo.pascoli at rte-france.com>}
  */
 public class TcDocumentTypeWriter {
-    private final DateTimeFormatter isoInstantFormatter = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm'Z'");
+    private static final String V1 = "1";
+    private static final DateTimeFormatter UTC_FORMAT = DateTimeFormatter.ofPattern("yyyy-MM-dd'T'HH:mm'Z'").withZone(ZoneOffset.UTC);
     private final TcDocumentType tcDocumentType;
     private final LongIdentificationType documentIdentification;
     private final VersionType versionType;
@@ -85,7 +89,7 @@ public class TcDocumentTypeWriter {
     private final String processCode;
     private final LocalDate localTargetDate;
 
-    public TcDocumentTypeWriter(String processCode, LocalDate localDate) {
+    public TcDocumentTypeWriter(final String processCode, final LocalDate localDate) {
         this.tcDocumentType = new TcDocumentType();
         this.processCode = processCode;
         this.localTargetDate = localDate;
@@ -104,62 +108,70 @@ public class TcDocumentTypeWriter {
         fillValidationResults();
     }
 
-    public synchronized void fillWithNoTtcAdjustmentError() {
-        List<TTimestamp> listTimestamps = tcDocumentType.getValidationResults().get(0).getTimestamp();
+    private static OffsetDateTime toBrusselsStartOfDay(final LocalDate date) {
+        return date.atStartOfDay().atZone(EUROPE_BRUSSELS_ZONE_ID).toOffsetDateTime();
+    }
 
-        OffsetDateTime startDateTime = localTargetDate.atStartOfDay().atZone(EUROPE_BRUSSELS_ZONE_ID).toOffsetDateTime().withMinute(30);
-        OffsetDateTime endDateTime;
+    public synchronized void fillWithNoTtcAdjustmentError() {
+        final List<TTimestamp> timestamps = tcDocumentType.getValidationResults().getFirst().getTimestamp();
+
+        OffsetDateTime startDateTimeBrussels = toBrusselsStartOfDay(localTargetDate).withMinute(30);
+        OffsetDateTime endDateTimeBrussels;
 
         if (processCode.equals("ID")) {
-            startDateTime = startDateTime.plusHours(12);
-            endDateTime = startDateTime.plusHours(12);
+            startDateTimeBrussels = startDateTimeBrussels.plusHours(12);
+            endDateTimeBrussels = startDateTimeBrussels.plusHours(12);
         } else {
-            endDateTime = startDateTime.plusHours(24);
+            endDateTimeBrussels = startDateTimeBrussels.plusHours(24);
         }
 
-        while (startDateTime.isBefore(endDateTime)) {
-            TTimestamp ts = initializeTimestampResult(startDateTime);
+        while (startDateTimeBrussels.isBefore(endDateTimeBrussels)) {
+            final TTimestamp ts = initializeTimestampResult(startDateTimeBrussels);
 
-            TextType textTypeRedFlagReason = new TextType();
+            final TextType textTypeRedFlagReason = new TextType();
             textTypeRedFlagReason.setV(STATUS_ERROR_MESSAGE);
 
-            TNumber statusNumber = new TNumber();
-            statusNumber.setV(BigInteger.ZERO);
+            final TNumber statusNumber = new TNumber();
+            statusNumber.setV(ZERO);
 
             ts.setSTATUS(statusNumber);
             ts.setRedFlagReason(textTypeRedFlagReason);
 
-            listTimestamps.add(ts);
+            timestamps.add(ts);
 
-            startDateTime = startDateTime.plusHours(1);
+            startDateTimeBrussels = startDateTimeBrussels.plusHours(1);
         }
 
     }
 
-    public synchronized void fillWithError(TTimestamp timestampData) {
-        List<TTimestamp> listTimestamps = tcDocumentType.getValidationResults().get(0).getTimestamp();
+    public synchronized void fillWithError(final TTimestamp timestampData, final String errorMessage) {
+        final List<TTimestamp> listTimestamps = tcDocumentType.getValidationResults().getFirst().getTimestamp();
 
-        TTimestamp ts = initializeTimestampResult(timestampData);
+        final TTimestamp ts = initializeTimestampResult(timestampData);
 
-        TNumber status = new TNumber();
-        // calcul failure
-        status.setV(BigInteger.ONE);
+        final TNumber status = new TNumber();
+        // calculation failure
+        status.setV(ONE);
         ts.setSTATUS(status);
 
-        TextType errorMessage = new TextType();
-        errorMessage.setV("Process fail during TSO validation phase.");
-        ts.setRedFlagReason(errorMessage);
+        final TextType redFlagReason = new TextType();
+        redFlagReason.setV(errorMessage);
+        ts.setRedFlagReason(redFlagReason);
 
         listTimestamps.add(ts);
 
-        listTimestamps.sort(Comparator.comparing(c -> OffsetDateTime.parse(c.getTime().getV())));
+        listTimestamps.sort(comparingOffsetDateTime());
 
     }
 
-    public synchronized void fillWithTimestampResult(TTimestamp timestampResult) {
-        List<TTimestamp> listTimestamps = tcDocumentType.getValidationResults().get(0).getTimestamp();
-        listTimestamps.add(timestampResult);
-        listTimestamps.sort(Comparator.comparing(c -> OffsetDateTime.parse(c.getTime().getV())));
+    public synchronized void fillWithTimestampResult(final TTimestamp timestampResult) {
+        List<TTimestamp> timestamps = tcDocumentType.getValidationResults().getFirst().getTimestamp();
+        timestamps.add(timestampResult);
+        timestamps.sort(comparingOffsetDateTime());
+    }
+
+    private Comparator<TTimestamp> comparingOffsetDateTime() {
+        return comparing(tst -> OffsetDateTime.parse(tst.getTime().getV()));
     }
 
     private void fillHeaders() {
@@ -178,27 +190,27 @@ public class TcDocumentTypeWriter {
     }
 
     private void initializeHeadersData() {
-        tcDocumentType.setDtdVersion("1");
-        tcDocumentType.setDtdRelease("1");
+        tcDocumentType.setDtdVersion(V1);
+        tcDocumentType.setDtdRelease(V1);
 
         documentIdentification.setV(getDocumentIdentification());
 
         versionType.setV(1);
 
-        messageTypedocumentType.setV(MessageTypeList.A_32);
+        messageTypedocumentType.setV(A_32);
 
-        processType.setV(ProcessTypeList.A_15);
+        processType.setV(A_15);
 
         senderIdentificationPartyType.setV(SENDER_IDENTIFICATION);
-        senderIdentificationPartyType.setCodingScheme(CodingSchemeType.A_01);
+        senderIdentificationPartyType.setCodingScheme(A_01);
 
         receiverIdentificationPartyType.setV(RECEIVER_IDENTIFICATION);
-        receiverIdentificationPartyType.setCodingScheme(CodingSchemeType.A_01);
+        receiverIdentificationPartyType.setCodingScheme(A_01);
 
-        senderRoleRoleType.setV(RoleTypeList.A_04);
-        receiverRoleRoleType.setV(RoleTypeList.A_04);
+        senderRoleRoleType.setV(A_04);
+        receiverRoleRoleType.setV(A_04);
 
-        domainAreaType.setCodingScheme(CodingSchemeType.A_01);
+        domainAreaType.setCodingScheme(A_01);
         domainAreaType.setV(DOMAIN);
 
         timeIntervalType.setV(getTimeInterval());
@@ -206,28 +218,29 @@ public class TcDocumentTypeWriter {
     }
 
     private void fillValidationResults() {
-        List<TResultTimeseries> listResultTimeseries = tcDocumentType.getValidationResults();
+        final List<TResultTimeseries> resultTimeSeries = tcDocumentType.getValidationResults();
         TResultTimeseries tResultTimeseries = new TResultTimeseries();
 
-        IdentificationType timeSeriesIdentification = new IdentificationType();
-        timeSeriesIdentification.setV(localTargetDate.format(DateTimeFormatter.ofPattern(TIMESERIES_IDENTIFICATION_PATTERN, Locale.FRANCE)));
+        final IdentificationType timeSeriesIdentification = new IdentificationType();
+        timeSeriesIdentification.setV(localTargetDate.format(DateTimeFormatter.ofPattern(TIMESERIES_IDENTIFICATION_PATTERN,
+                                                                                         FRANCE)));
 
-        BusinessType businessType = new BusinessType();
-        businessType.setV(BusinessTypeList.A_81);
+        final BusinessType businessType = new BusinessType();
+        businessType.setV(A_81);
 
-        EnergyProductType energyProductType = new EnergyProductType();
+        final EnergyProductType energyProductType = new EnergyProductType();
         energyProductType.setV(PRODUCT);
 
-        AreaType inArea = new AreaType();
+        final AreaType inArea = new AreaType();
         inArea.setV(IN_AREA);
-        inArea.setCodingScheme(CodingSchemeType.A_01);
+        inArea.setCodingScheme(A_01);
 
-        AreaType outArea = new AreaType();
+        final AreaType outArea = new AreaType();
         outArea.setV(OUT_AREA);
-        outArea.setCodingScheme(CodingSchemeType.A_01);
+        outArea.setCodingScheme(A_01);
 
-        UnitOfMeasureType unitOfMeasureType = new UnitOfMeasureType();
-        unitOfMeasureType.setV(UnitOfMeasureTypeList.MAW);
+        final UnitOfMeasureType unitOfMeasureType = new UnitOfMeasureType();
+        unitOfMeasureType.setV(MAW);
 
         tResultTimeseries.setTimeSeriesIdentification(timeSeriesIdentification);
         tResultTimeseries.setBusinessType(businessType);
@@ -236,79 +249,81 @@ public class TcDocumentTypeWriter {
         tResultTimeseries.setOutArea(outArea);
         tResultTimeseries.setMeasureUnit(unitOfMeasureType);
 
-        listResultTimeseries.add(tResultTimeseries);
+        resultTimeSeries.add(tResultTimeseries);
     }
 
-    private TTimestamp initializeTimestampResult(OffsetDateTime currentDateTime) {
-        TTimestamp ts = new TTimestamp();
+    private TTimestamp initializeTimestampResult(final OffsetDateTime currentDateTime) {
+        final TTimestamp timestamp = new TTimestamp();
 
-        TTime time = new TTime();
-        time.setV(currentDateTime.format(isoInstantFormatter.withZone(ZoneOffset.UTC)));
+        final TTime time = new TTime();
+        time.setV(currentDateTime.format(UTC_FORMAT));
 
-        TimeIntervalType timeInterval = new TimeIntervalType();
-        timeInterval.setV(currentDateTime.withMinute(0).format(isoInstantFormatter.withZone(ZoneOffset.UTC)) + "/" + currentDateTime.withMinute(0).plusHours(1).format(isoInstantFormatter.withZone(ZoneOffset.UTC)));
+        final TimeIntervalType timeInterval = new TimeIntervalType();
+        timeInterval.setV(currentDateTime.withMinute(0).format(UTC_FORMAT)
+                          + "/"
+                          + currentDateTime.withMinute(0).plusHours(1).format(UTC_FORMAT));
 
-        ts.setReferenceCalculationTime(time);
+        timestamp.setReferenceCalculationTime(time);
 
-        ts.setTimeInterval(timeInterval);
-        ts.setTime(time);
+        timestamp.setTimeInterval(timeInterval);
+        timestamp.setTime(time);
 
-        return ts;
+        return timestamp;
     }
 
-    private TTimestamp initializeTimestampResult(TTimestamp timestampData) {
-        TTimestamp ts = new TTimestamp();
+    private TTimestamp initializeTimestampResult(final TTimestamp timestampData) {
+        final TTimestamp timestamp = new TTimestamp();
 
-        TTime time = new TTime();
+        final TTime time = new TTime();
         time.setV(timestampData.getTime().getV());
 
-        TimeIntervalType timeInterval = new TimeIntervalType();
+        final TimeIntervalType timeInterval = new TimeIntervalType();
         timeInterval.setV(timestampData.getTimeInterval().getV());
 
-        ts.setReferenceCalculationTime(timestampData.getReferenceCalculationTime());
+        timestamp.setReferenceCalculationTime(timestampData.getReferenceCalculationTime());
 
-        ts.setTimeInterval(timeInterval);
-        ts.setTime(time);
+        timestamp.setTimeInterval(timeInterval);
+        timestamp.setTime(time);
 
-        return ts;
+        return timestamp;
     }
 
     public InputStream buildTcDocumentType() {
-        StringWriter sw = new StringWriter();
+        final StringWriter stringWriter = new StringWriter();
         try {
-            JAXBContext jaxbContext = JAXBContext.newInstance(TcDocumentType.class);
-            Marshaller jaxbMarshaller = jaxbContext.createMarshaller();
+            final JAXBContext jaxbContext = JAXBContext.newInstance(TcDocumentType.class);
+            final Marshaller jaxbMarshaller = jaxbContext.createMarshaller();
             jaxbMarshaller.setProperty(Marshaller.JAXB_FORMATTED_OUTPUT, Boolean.TRUE);
-            JAXBElement<TcDocumentType> root = new JAXBElement<>(new QName("TTC_rtevalidation_document"), TcDocumentType.class, tcDocumentType);
-            jaxbMarshaller.marshal(root, sw);
-        } catch (JAXBException e) {
+            final JAXBElement<TcDocumentType> root = new JAXBElement<>(new QName("TTC_rtevalidation_document"), TcDocumentType.class, tcDocumentType);
+            jaxbMarshaller.marshal(root, stringWriter);
+        } catch (final JAXBException e) {
             throw new CseValidPublicationInvalidDataException("Error while writing TTC validation result document ", e);
         }
-        return new ByteArrayInputStream(sw.toString().getBytes());
+        return new ByteArrayInputStream(stringWriter.toString().getBytes());
     }
 
     private String getTimeInterval() {
-        OffsetDateTime startTime = localTargetDate.atStartOfDay().atZone(EUROPE_BRUSSELS_ZONE_ID).toOffsetDateTime();
-        OffsetDateTime endTime = localTargetDate.atStartOfDay().plusDays(1).atZone(EUROPE_BRUSSELS_ZONE_ID).toOffsetDateTime();
-        return String.format("%s/%s", startTime.format(DateTimeFormatter.ISO_INSTANT), endTime.format(DateTimeFormatter.ISO_INSTANT));
+        final OffsetDateTime startDateTimeBrussels = toBrusselsStartOfDay(localTargetDate);
+        final OffsetDateTime endDateTimeBrussels = localTargetDate.atStartOfDay().plusDays(1).atZone(EUROPE_BRUSSELS_ZONE_ID).toOffsetDateTime();
+        return String.format("%s/%s", startDateTimeBrussels.format(ISO_INSTANT), endDateTimeBrussels.format(ISO_INSTANT));
     }
 
     private String getDocumentIdentification() {
-        String pattern = String.format("'TTC_RTEValidation_'yyyyMMdd'_%s'e", processCode);
-        return localTargetDate.format(DateTimeFormatter.ofPattern(pattern, Locale.FRANCE));
+        final String pattern = String.format("'TTC_RTEValidation_'yyyyMMdd'_%s'e", processCode);
+        return localTargetDate.format(DateTimeFormatter.ofPattern(pattern, FRANCE));
     }
 
-    private XMLGregorianCalendar calendarFromDateTime(OffsetDateTime offsetDateTime) {
+    private XMLGregorianCalendar calendarFromDateTime(final OffsetDateTime offsetDateTime) {
         try {
-            GregorianCalendar calendar = GregorianCalendar.from(offsetDateTime.toZonedDateTime());
+            final GregorianCalendar calendar = GregorianCalendar.from(offsetDateTime.toZonedDateTime());
             return DatatypeFactory.newInstance().newXMLGregorianCalendar(calendar);
-        } catch (DatatypeConfigurationException e) {
+        } catch (final DatatypeConfigurationException e) {
             throw new CseValidPublicationInternalException("Internal date-time conversion error", e);
         }
     }
 
-    public void setVersionNumber(int versionNumber) {
-        VersionType version = new VersionType();
+    public void setVersionNumber(final int versionNumber) {
+        final VersionType version = new VersionType();
         version.setV(versionNumber);
         tcDocumentType.setDocumentVersion(version);
     }
